--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-    "name": "node-js-getting-started",
-    "version": "0.3.0",
-    "description": "A sample Node.js app using Express 4",
-    "engines": {
-      "node": "14.x"
-    },
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js"
-    },
-    "dependencies": {
-      "ejs": "^3.1.5",
-      "express": "^4.15.2"
-    },
-    "devDependencies": {
-      "got": "^11.3.0",
-      "tape": "^4.7.0"
-    }
+  "name": "node-js-getting-started",
+  "version": "0.3.0",
+  "description": "A sample Node.js app using Express 4",
+  "engines": {
+    "node": "14.x"
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.15.2",
+    "stripe": "^8.149.0"
+  },
+  "devDependencies": {
+    "got": "^11.3.0",
+    "tape": "^4.7.0"
   }
+}
