--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
     "stripe": "^8.149.0"
