--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
-    "stripe": "^8.149.0"
+    "stripe": "^8.149.0",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
